# SaveSync

./: .gitignore  index.html  package.json  setup.bat  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  developer-qol.md  feature_request.md
SaveSync/: tagmap.json
SaveSync/plugins/: google_drive.lua  onedrive.lua
SaveSync/plugins/dropbox/: main.lua
SaveSync/plugins/google_drive/: main.lua
SaveSync/plugins/google_drive/json/decode/: util.lua
SaveSync/plugins/local/: main.lua
SaveSync/plugins/onedrive/: main.lua
fake_folder/fake/: nice  test.txt
public/: error.html
src/: App.css  App.tsx  types.ts  utils.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: conflicting.json  default.json  mapping.json
src-tauri/src/: commands.rs  lib.rs  listeners.rs  main.rs  savesync.rs  service.rs
src-tauri/src/savesync/: config_paths.rs  conflict_files.rs  emitter.rs  fs_utils.rs  plugin.rs  state.rs  store.rs  watch.rs  zip_utils.rs
src/components/: DivButton.tsx
src/logic/: all-backend.ts  backend.ts  conflicting_folder.tsx  conflicting_window.ts  main-backend.ts  menu.ts  window.ts
src/pages/: conflicting.tsx  error-page.tsx  fmap.tsx  folders.tsx  mapping.tsx  plugin-select.tsx
src/types/: IPC.ts  data.ts  rust.ts
