[package]
name = "savesync"
version = "0.1.0"
description = "A desktop application which syncs your data to your favourite cloud storage"
authors = ["Zachareee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "savesync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
debug = 0

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mlua = { version = "0.10.5", features = ["lua54", "module", "serialize"] }
regex = "1.11.1"
zip = "2.2.2"
notify-debouncer-full = "0.5.0"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

